// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart table suite 1 Indicator, 1 Area snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c11 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c11 > p {
  margin: 0;
}

.c11 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c11 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c11 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c8 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c21 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c21:last-child {
  padding-right: 0;
}

.c25 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c25:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c14 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c15 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c22 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c27 {
  text-align: right;
  padding-right: 10px;
}

.c28 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c23 {
  text-align: left;
  width: 10%;
}

.c5 {
  text-align: left;
  vertical-align: top;
}

.c26 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c12 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
}

.c2 {
  border-collapse: separate;
}

.c13 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c19 {
  width: 27%;
  padding-left: 0.5em;
}

.c17 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 8px;
}

.c20 {
  display: block;
}

.c24 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
}

.c18 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
}

.c29 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
}

.c16 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
}

.c6 {
  border: none;
}

.c0 {
  overflow-x: scroll;
  width: 100%;
}

@media print {
  .c11 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    margin-bottom: 20px;
  }
}

@media print {
  .c8 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c8 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c21 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c22 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c22 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c12 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 c2"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3 c4 c5 c6"
            colspan="5"
          >
            <div
              class="c7"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c8 c9"
                >
                  <div
                    class="c10"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c11 c12"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
          />
          <th
            class="c3 c4 c5 c13"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="4"
          />
          <th
            class="c3 c4 c5 c17"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 3 c4 c5 c18"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c3 c4 c5 c19"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="1 c20"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="1 c20"
            >
              %
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="2 c21 c22 c23 c24"
          >
            2004
          </td>
          <td
            class="c25 c22 c23"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            267
          </td>
          <td
            class="c21 c22 c27"
          >
            703.4
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="4 c25 c22 c27 c28 c29"
            data-testid="grey-table-cell"
          >
            904.9
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="2 c21 c22 c23 c24"
          >
            2008
          </td>
          <td
            class="c25 c22 c23"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            222
          </td>
          <td
            class="c21 c22 c27"
          >
            890.3
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="4 c25 c22 c27 c28 c29"
            data-testid="grey-table-cell"
          >
            966.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Line chart table suite 1 Indicator, 2 Areas snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c11 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c11 > p {
  margin: 0;
}

.c11 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c11 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c11 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c8 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c21 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c21:last-child {
  padding-right: 0;
}

.c25 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c25:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c14 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c15 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c22 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c27 {
  text-align: right;
  padding-right: 10px;
}

.c29 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c23 {
  text-align: left;
  width: 10%;
}

.c5 {
  text-align: left;
  vertical-align: top;
}

.c26 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c12 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
}

.c2 {
  border-collapse: separate;
}

.c13 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c19 {
  width: 27%;
  padding-left: 0.5em;
}

.c17 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 8px;
}

.c28 {
  border-left: solid black 1px;
}

.c20 {
  display: block;
}

.c24 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
}

.c18 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
}

.c30 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
}

.c16 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
}

.c6 {
  border: none;
}

.c0 {
  overflow-x: scroll;
  width: 100%;
}

@media print {
  .c11 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    margin-bottom: 20px;
  }
}

@media print {
  .c8 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c8 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c21 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c22 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c22 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c12 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 c2"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3 c4 c5 c6"
          />
          <th
            class="c3 c4 c5 c6"
            colspan="5"
          >
            <div
              class="c7"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c8 c9"
                >
                  <div
                    class="c10"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c11 c12"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
          <th
            class="c3 c4 c5 c6"
            colspan="5"
          >
            <div
              class="c7"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c8 c9"
                >
                  <div
                    class="c10"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c11 c12"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
          />
          <th
            class="c3 c4 c5 c13"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 c4 c5 c13"
            colspan="5"
          >
            South FooBar
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="4"
          />
          <th
            class="c3 c4 c5 c17"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c3"
            colspan="3"
          />
          <th
            class="c3 c4 c5 c17"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 3 c4 c5 c18"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c3 c4 c5 c19"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="1 c20"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c3 c4 c5 c19"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="1 c20"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c3 c4 c14"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c3 5 c4 c14 c15 c16"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="1 c20"
            >
              %
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="2 c21 c22 c23 c24"
          >
            2004
          </td>
          <td
            class="c25 c22 c23"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            267
          </td>
          <td
            class="c21 c22 c27"
          >
            703.4
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="c25 c22 c23 c28"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            222
          </td>
          <td
            class="c21 c22 c27"
          >
            135.1
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="4 c25 c22 c27 c29 c30"
            data-testid="grey-table-cell"
          >
            904.9
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="2 c21 c22 c23 c24"
          >
            2008
          </td>
          <td
            class="c25 c22 c23"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            222
          </td>
          <td
            class="c21 c22 c27"
          >
            890.3
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="c25 c22 c23 c28"
          >
            <strong
              class="c8 c26"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c21 c22 c27"
          >
            222
          </td>
          <td
            class="c21 c22 c27"
          >
            135.1
          </td>
          <td
            class="c21 c22 c27"
          >
            441.7
          </td>
          <td
            class="c21 c22 c27"
          >
            578.3
          </td>
          <td
            class="4 c25 c22 c27 c29 c30"
            data-testid="grey-table-cell"
          >
            966.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
